--- a/BoilerPlate/index.html
+++ b/BoilerPlate/index.html
@@ -10,11 +10,11 @@
             integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
             crossorigin="anonymous"
         />
-        <link rel="stylesheet" href="./style.css" />
+        <link rel="stylesheet" href="../componets-style.css" />
         <title>50DaysWeb</title>
     </head>
     <body>
+        <progress-steps end="4"></progress-steps>
         <script src="../components.js"></script>
-        <script src="./script.js"></script>
     </body>
 </html>
