--- a/Day3/index.html
+++ b/Day3/index.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         <div class="container">
-            <div class="circle-container">
+            <div class="content">
                 <div class="circle">
                     <button class="close">
                         <i class="fas fa-times"></i>
@@ -24,31 +24,31 @@
                         <i class="fas fa-bars"></i>
                     </button>
                 </div>
+
+                <article>
+                    <h1>Example Article</h1>
+                    <small>writer</small>
+                    <p
+                        >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere consequuntur suscipit, magnam
+                        molestias ipsa laboriosam voluptatibus hic inventore quaerat, fugiat minus, perferendis
+                        laudantium sunt eligendi sint tenetur libero et maiores? Ipsa quis neque quae reiciendis eos
+                        ipsum vitae, provident accusantium harum delectus distinctio esse ipsam vero velit aliquid
+                        dignissimos necessitatibus explicabo. Nemo ullam aspernatur dolorum quia saepe eum sit vitae
+                        facilis excepturi cum magni, provident aliquam ea totam perspiciatis? Maxime ipsa eveniet minus
+                        et fugiat ipsam est facere hic! Ullam iure doloremque dicta minus qui quia. Odio, quas nesciunt
+                        illo autem ducimus suscipit ab hic dolor deserunt, cupiditate a ea!</p
+                    >
+                </article>
             </div>
 
-            <div class="content">
-                <h1>Example Article</h1>
-                <small>writer</small>
-                <p
-                    >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere consequuntur suscipit, magnam
-                    molestias ipsa laboriosam voluptatibus hic inventore quaerat, fugiat minus, perferendis laudantium
-                    sunt eligendi sint tenetur libero et maiores? Ipsa quis neque quae reiciendis eos ipsum vitae,
-                    provident accusantium harum delectus distinctio esse ipsam vero velit aliquid dignissimos
-                    necessitatibus explicabo. Nemo ullam aspernatur dolorum quia saepe eum sit vitae facilis excepturi
-                    cum magni, provident aliquam ea totam perspiciatis? Maxime ipsa eveniet minus et fugiat ipsam est
-                    facere hic! Ullam iure doloremque dicta minus qui quia. Odio, quas nesciunt illo autem ducimus
-                    suscipit ab hic dolor deserunt, cupiditate a ea!</p
-                >
-            </div>
+            <nav>
+                <ul>
+                    <li><i class="fas fa-home"></i> Home</li>
+                    <li><i class="fas fa-user-alt"></i> About</li>
+                    <li><i class="fas fa-envelope"></i> Contact</li>
+                </ul>
+            </nav>
         </div>
-
-        <nav>
-            <ul>
-                <li><i class="fas fa-home"></i> Home</li>
-                <li><i class="fas fa-user-alt"></i> About</li>
-                <li><i class="fas fa-envelope"></i> Contact</li>
-            </ul>
-        </nav>
         <script src="./script.js"></script>
     </body>
 </html>
