--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
             crossorigin="anonymous"
         />
-        <link rel="stylesheet" href="../componets-style.css" />
+        <link rel="stylesheet" href="./componets-style.css" />
         <title>50DaysWeb</title>
     </head>
     <body>
@@ -23,7 +23,7 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab suscipit fugiat quae odit maxime ducimus
             laudantium cumque error, et perferendis maiores dolore non eaque fuga voluptatum ea ex. Itaque, facere!
         </rotating-navigation>
-        <script src="../components.js"></script>
+        <script src="./components.js"></script>
         <script>
             // Day 1 default javascript
             const expandingCards = document.querySelector('expanding-cards');
